Update install script and C snippets

--- a/INSTALL
+++ b/INSTALL
@@ -1,3 +1,9 @@
-mv settings.json ~/.config/Code/User
-mv cpp.json ~/.config/Code/User/snippets
-mv makefile.json ~/.config/Code/User/snippets
+cp settings.json ~/.config/Code/User
+cp c.json ~/.config/Code/User
+cp cpp.json ~/.config/Code/User/snippets
+cp makefile.json ~/.config/Code/User/snippets
+code --install-extension MS-CEINTL.vscode-language-pack-fr
+code --install-extension formulahendry.terminal
+code --install-extension 2gua.rainbow-brackets
+code --install-extension tamsibesson.Epitech-c-snippets
+code --install-extension austin.code-gnu-global
