--- a/INSTALL
+++ b/INSTALL
@@ -3,6 +3,7 @@ cp c.json ~/.config/Code/User
 cp cpp.json ~/.config/Code/User/snippets
 cp makefile.json ~/.config/Code/User/snippets
 code --install-extension MS-CEINTL.vscode-language-pack-fr
+code --install-extension ms-vscode.cpptools
 code --install-extension formulahendry.terminal
 code --install-extension 2gua.rainbow-brackets
 code --install-extension tamsibesson.Epitech-c-snippets
